--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react-dom": "^19.0.0"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.24",
         "postcss": "^8",
         "tailwindcss": "^3.4.1"
     }
