--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "dependencies": {
         "@supabase/supabase-js": "^2.47.0",
         "date-fns": "^4.1.0",
+        "file-saver": "^2.0.5",
         "lucide-react": "^0.469.0",
         "next": "^16.1.6",
         "react": "^19.2.4",
-        "react-dom": "^19.2.4"
+        "react-dom": "^19.2.4",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.24",
