--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
         "xlsx": "^0.18.5"
     },
     "devDependencies": {
+        "@types/node": "^24.3.0",
+        "@types/react": "^19.2.2",
+        "@types/react-dom": "^19.2.2",
         "autoprefixer": "^10.4.24",
         "postcss": "^8",
-        "tailwindcss": "^3.4.1"
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5.9.2"
     }
 }
